# seekserve

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  PROGRESS.md  README.md  SeekServe_PLAN.md  setup.sh  vcpkg.json
docs/: ARCHITECTURE.md  C_API.md  HTTP_RANGE_SPEC.md  SCHEDULER_POLICY.md  SECURITY.md  STORAGE_POLICY.md
fixtures/: Sintel_archive.torrent
flutter_seekserve/: .metadata  README.md  ffigen.yaml  pubspec.yaml
flutter_seekserve/android/: build.gradle  settings.gradle
flutter_seekserve/android/src/main/: AndroidManifest.xml
flutter_seekserve/example/: README.md  pubspec.yaml
flutter_seekserve/example/android/app/: build.gradle.kts
flutter_seekserve/example/android/app/src/main/: AndroidManifest.xml
flutter_seekserve/example/android/app/src/main/kotlin/com/example/flutter_seekserve_example/: MainActivity.kt
flutter_seekserve/example/android/app/src/main/res/xml/: network_security_config.xml
flutter_seekserve/example/ios/Runner/: Info.plist
flutter_seekserve/example/ios/Runner.xcodeproj/: project.pbxproj
flutter_seekserve/example/lib/: main.dart
flutter_seekserve/example/lib/providers/: seekserve_provider.dart
flutter_seekserve/example/lib/screens/: file_selection_screen.dart  home_screen.dart  player_screen.dart
flutter_seekserve/example/lib/widgets/: status_bar.dart  torrent_card.dart
flutter_seekserve/ios/: flutter_seekserve.podspec
flutter_seekserve/ios/Classes/: seekserve_ffi_trampoline.m
flutter_seekserve/lib/: seekserve.dart
flutter_seekserve/lib/src/: bindings_generated.dart  native_library.dart  seekserve_client.dart  seekserve_exception.dart
flutter_seekserve/lib/src/models/: file_info.dart  seekserve_config.dart  seekserve_event.dart  torrent_status.dart
flutter_seekserve/native_header/: seekserve_c.h
flutter_seekserve/test/: models_test.dart
flutter_seekserve_app/: README.md  pubspec.yaml
flutter_seekserve_app/android/app/: build.gradle.kts
flutter_seekserve_app/android/app/src/main/: AndroidManifest.xml
flutter_seekserve_app/android/app/src/main/kotlin/com/seekserve/flutter_seekserve_app/: MainActivity.kt
flutter_seekserve_app/ios/Runner/: Info.plist
flutter_seekserve_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_seekserve_app/lib/: main.dart  router.dart
flutter_seekserve_app/lib/screens/: home_screen.dart  player_screen.dart  torrent_detail_screen.dart
flutter_seekserve_app/test/: widget_test.dart
flutter_seekserve_ui/: pubspec.yaml
flutter_seekserve_ui/lib/: flutter_seekserve_ui.dart
flutter_seekserve_ui/lib/src/atoms/: ss_badge.dart  ss_button.dart  ss_card.dart  ss_chip.dart  ss_dialog.dart  ss_icon_button.dart  ss_progress_bar.dart  ss_slider.dart  ss_text_field.dart
flutter_seekserve_ui/lib/src/composites/: ss_add_torrent_bar.dart  ss_add_torrent_dialog.dart  ss_delete_confirm.dart  ss_file_tile.dart  ss_file_tree.dart  ss_server_status_panel.dart  ss_stream_mode_badge.dart  ss_torrent_detail.dart  ss_torrent_list.dart  ss_torrent_tile.dart  ss_transfer_stats.dart
flutter_seekserve_ui/lib/src/controllers/: ss_torrent_manager.dart
flutter_seekserve_ui/lib/src/player/: ss_buffering_overlay.dart  ss_player_status_bar.dart  ss_seek_controls.dart  ss_track_selector.dart  ss_video_player.dart
flutter_seekserve_ui/lib/src/theme/: ss_theme.dart  ss_theme_data.dart
flutter_seekserve_ui/lib/src/utils/: format.dart
flutter_seekserve_ui/test/: atoms_test.dart  format_test.dart  theme_test.dart
scripts/: build-android.sh  build-flutter-natives.sh  build-ios.sh  dev-ios-sim.sh
seekserve-capi/: CMakeLists.txt
seekserve-capi/include/: seekserve_c.h
seekserve-capi/src/: seekserve_c.cpp
seekserve-core/: CMakeLists.txt
seekserve-core/include/seekserve/: alert_dispatcher.hpp  byte_range_mapper.hpp  byte_source.hpp  config.hpp  error.hpp  metadata_catalog.hpp  offline_cache.hpp  piece_availability.hpp  session_manager.hpp  streaming_scheduler.hpp  types.hpp
seekserve-core/src/: alert_dispatcher.cpp  byte_range_mapper.cpp  byte_source.cpp  error.cpp  metadata_catalog.cpp  offline_cache.cpp  piece_availability.cpp  session_manager.cpp  streaming_scheduler.cpp
seekserve-demo/: CMakeLists.txt
seekserve-demo/src/: main.cpp
seekserve-serve/: CMakeLists.txt
seekserve-serve/include/seekserve/: auth_utils.hpp  control_api_server.hpp  engine.hpp  http_range_server.hpp  range_parser.hpp
seekserve-serve/src/: control_api_server.cpp  engine.cpp  http_range_server.cpp  range_parser.cpp  token_auth.cpp
tests/: CMakeLists.txt
tests/integration/: test_end_to_end_stream.cpp  test_http_range_server.cpp  test_session_lifecycle.cpp  test_stress.cpp
tests/unit/: test_byte_range_mapper.cpp  test_byte_source.cpp  test_capi.cpp  test_metadata_catalog.cpp  test_offline_cache.cpp  test_piece_availability.cpp  test_range_parser.cpp  test_streaming_scheduler.cpp
triplets/: arm-neon-android.cmake
